[gd_scene load_steps=2 format=3 uid="uid://cyohdx5t15vo3"]

[ext_resource type="Script" path="res://scripts/ui/equipment_select_screen.gd" id="1_yjhtc"]

[node name="EquipmentSelectScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yjhtc")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.278431, 0.227451, 0.376471, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "装備選択"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="EquipmentTypeContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="RiderTypeButton" type="Button" parent="MarginContainer/VBoxContainer/EquipmentTypeContainer"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
toggle_mode = true
button_pressed = true
text = "騎手"

[node name="HorseTypeButton" type="Button" parent="MarginContainer/VBoxContainer/EquipmentTypeContainer"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
toggle_mode = true
text = "装備"

[node name="ManualTypeButton" type="Button" parent="MarginContainer/VBoxContainer/EquipmentTypeContainer"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
toggle_mode = true
text = "指南書"

[node name="EquipmentScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="EquipmentGrid" type="GridContainer" parent="MarginContainer/VBoxContainer/EquipmentScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 3

[node name="EquipmentItemTemplate" type="PanelContainer" parent="MarginContainer/VBoxContainer/EquipmentScrollContainer/EquipmentGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/EquipmentScrollContainer/EquipmentGrid/EquipmentItemTemplate"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/EquipmentScrollContainer/EquipmentGrid/EquipmentItemTemplate/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/EquipmentScrollContainer/EquipmentGrid/EquipmentItemTemplate/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "装備名"
horizontal_alignment = 1

[node name="RarityLabel" type="Label" parent="MarginContainer/VBoxContainer/EquipmentScrollContainer/EquipmentGrid/EquipmentItemTemplate/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "SSR"
horizontal_alignment = 1

[node name="CategoryLabel" type="Label" parent="MarginContainer/VBoxContainer/EquipmentScrollContainer/EquipmentGrid/EquipmentItemTemplate/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.807843, 0.807843, 0.807843, 1)
theme_override_font_sizes/font_size = 20
text = "騎手"
horizontal_alignment = 1

[node name="EffectPreview" type="Label" parent="MarginContainer/VBoxContainer/EquipmentScrollContainer/EquipmentGrid/EquipmentItemTemplate/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.839216, 0.847059, 0.956863, 1)
theme_override_font_sizes/font_size = 22
text = "速力+10"
horizontal_alignment = 1

[node name="SelectedIndicator" type="ColorRect" parent="MarginContainer/VBoxContainer/EquipmentScrollContainer/EquipmentGrid/EquipmentItemTemplate"]
visible = false
layout_mode = 2
color = Color(0.290196, 0.501961, 0.847059, 0.270588)

[node name="SelectedInfoContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="SelectedRiderContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/SelectedInfoContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/SelectedInfoContainer/SelectedRiderContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/SelectedInfoContainer/SelectedRiderContainer/MarginContainer"]
layout_mode = 2

[node name="TypeLabel" type="Label" parent="MarginContainer/VBoxContainer/SelectedInfoContainer/SelectedRiderContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.752941, 0.752941, 0.752941, 1)
theme_override_font_sizes/font_size = 18
text = "騎手"
horizontal_alignment = 1

[node name="SelectedLabel" type="Label" parent="MarginContainer/VBoxContainer/SelectedInfoContainer/SelectedRiderContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "未選択"
horizontal_alignment = 1

[node name="SelectedHorseContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/SelectedInfoContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/SelectedInfoContainer/SelectedHorseContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/SelectedInfoContainer/SelectedHorseContainer/MarginContainer"]
layout_mode = 2

[node name="TypeLabel" type="Label" parent="MarginContainer/VBoxContainer/SelectedInfoContainer/SelectedHorseContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.752941, 0.752941, 0.752941, 1)
theme_override_font_sizes/font_size = 18
text = "装備"
horizontal_alignment = 1

[node name="SelectedLabel" type="Label" parent="MarginContainer/VBoxContainer/SelectedInfoContainer/SelectedHorseContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "未選択"
horizontal_alignment = 1

[node name="SelectedManualContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/SelectedInfoContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/SelectedInfoContainer/SelectedManualContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/SelectedInfoContainer/SelectedManualContainer/MarginContainer"]
layout_mode = 2

[node name="TypeLabel" type="Label" parent="MarginContainer/VBoxContainer/SelectedInfoContainer/SelectedManualContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.752941, 0.752941, 0.752941, 1)
theme_override_font_sizes/font_size = 18
text = "指南書"
horizontal_alignment = 1

[node name="SelectedLabel" type="Label" parent="MarginContainer/VBoxContainer/SelectedInfoContainer/SelectedManualContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "未選択"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "戻る"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="NextButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 32
disabled = true
text = "次へ" 